--- a/src/Notepad.css
+++ b/src/Notepad.css
@@ -13,6 +13,7 @@
   /* making the textarea work */
   font-family: inherit;
   font-size: x-large;
+  color: black;
   line-height: 1.25em;
   margin: 0;
   border: #cbb solid 2px;
