--- a/src/Toolbar.css
+++ b/src/Toolbar.css
@@ -23,6 +23,7 @@
   font-size: 20px;
   text-align: center;
   line-height: 0px;
+  color: black;
   background-color: var(--bg-color);
   border: var(--line-color) solid 2px;
   margin: auto 10px;
